--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "babel-plugin-import": "^1.8.0",
     "dva": "^2.1.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "webpack": "^4.16.5"
   },
   "devDependencies": {
     "babel-plugin-dva-hmr": "^0.3.2",
@@ -22,8 +23,6 @@
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.1.0",
     "husky": "^0.12.0",
-    "less": "^2.7.3",
-    "less-loader": "^4.1.0",
     "redbox-react": "^1.4.3",
     "roadhog": "^2.0.0"
   }
